# Study-Helper

./: .env  README.md  app.py  pyproject.toml  run.ps1  server.py
chroma_db_faculty/: chroma.sqlite3
chroma_db_user/: chroma.sqlite3
data/: professors.json
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ChatArea.jsx  Sidebar.jsx
src/: graph.py  state.py  tools.py  tools_advisor.py
src/nodes/: advisor.py  classifier.py  query.py  quiz.py  quiz_grader.py  router.py  simplifier.py  summarizer.py
src/utils/: llm_setup.py  pdf_loader.py  scrape_professor.py  vector_store.py
uploads/: FTP操作手冊_B (4).pptx  quiz_solutions.txt
